# supabase_panel_fastapi_mvp

./: .env.example  README.md  app.py  pyproject.toml  requirements.txt
supa_mvp/: 01_mvp_claude.py  README_mvp_claude.md
